--- a/Angular2/TestAngular/src/app/articledetail/articledetail.component.html
+++ b/Angular2/TestAngular/src/app/articledetail/articledetail.component.html
@@ -12,5 +12,7 @@
     </div>
     <div class="row">
         <button class="btn" (click)="back()">返回列表</button>
+        <button class="btn" (click)="doComment()">评论</button>
     </div>
 </div>
+<router-outlet></router-outlet>
