--- a/Angular2/TestAngular/src/app/article/article.component.html
+++ b/Angular2/TestAngular/src/app/article/article.component.html
@@ -1,9 +1,16 @@
 <div class="article">
-     <ul class="articleList">
-         <li *ngFor="let blog of blogList" [routerLink]="['/articledetail',blog.id]">
-             <a>
-                 {{blog.id}}:{{blog.title}}
-             </a>
-         </li>
-     </ul>  
+    <ul class="articleList">
+            <li *ngFor="let blog of blogList" [routerLink]="['/articledetail',blog.id]" >
+                <a>
+                   {{blog.id}}:{{blog.title}}
+                </a>
+            </li>
+    </ul>
+    <div>
+</div>
+<div class="container">
+    <div class="row">
+        <button class="btn" (click)="doAdd()">新增文章</button>
+        <input type="text" class="input" [(ngModel)]="editStr">
+    </div>
 </div>
